--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row; 
   gap: 1rem;
-  align-items: flex-end;
+  align-items: center;
   flex-flow: column-reverse;
   align-items: row; /* Align items horizontally */
   justify-content: flex-start; /* Spread items horizontally */
