--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -1,20 +1,21 @@
 .expense-item {
-  display: inline;
+  display: flex;
   justify-content: space-between;
   align-items: center;
+ 
   padding: 0.5rem;
   margin: 1rem 0;
+  
   background-color: #4b4b4b;
 }
 
 .expense-item__description {
   display: flex;
-  flex-direction: row; 
+  flex-direction: column;
   gap: 1rem;
-  align-items: center;
+  align-items: flex-end;
   flex-flow: column-reverse;
-  align-items: row; /* Align items horizontally */
-  justify-content: flex-start; /* Spread items horizontally */
+  justify-content: flex-start;
   flex: 1;
 }
 
@@ -23,7 +24,7 @@
   font-size: 1rem;
   flex: 1;
   margin: 0 1rem;
-  color: white; 
+  color: white;
 }
 
 .expense-item__price {
